--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,8 +5,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #111111;
 }
-
 .main {
   padding: 5rem 0;
   flex: 1;
@@ -15,7 +15,17 @@
   justify-content: center;
   align-items: center;
 }
+.navbar{
+  background-color: #000000;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  height: 10%;
+  color:#f5f5f5da;
+  padding-right: 2%;
 
+}
 .footer {
   width: 100%;
   height: 100px;
